--- a/zen.yml
+++ b/zen.yml
@@ -1,7 +1,7 @@
 # -- General Info --------------------------------------------------------------
 host    : localhost
-port    : 1337
-timezone: Europe/Madrid
+port    : 8888
+timezone: Europe/Amsterdam
 
 # -- Environment ---------------------------------------------------------------
 environment: development
@@ -9,7 +9,53 @@ environment: development
 # -- RESTful services ----------------------------------------------------------
 api:
   - index
+  # - error
 
 # -- HTML pages ----------------------------------------------------------------
 www:
   - index
+
+# -- Static resources ----------------------------------------------------------
+statics:
+  - url     : /assets/:folder
+    folder  : /static
+    maxage  : 60 #secods
+  - url     : /img
+    folder  : /static/img
+    maxage  : 60 #secods
+
+# # -- session ----------------------------------------------------------------
+session:
+  # Cookie Request
+  cookie: zencookie
+  domain: ""
+  path  : "/"
+  expire: 3600 #seconds
+  # HTTP Header
+  authorization: zenauth
+
+
+# -- CORS Properties -----------------------------------------------------------
+headers:
+  Access-Control-Allow-Origin: "*"
+  Access-Control-Allow-Credentials: true
+  Access-Control-Allow-Methods: GET,PUT,POST,DELETE
+  Access-Control-Max-Age: 1
+  Access-Control-Allow-Headers:
+    - Accept
+    - Accept-Version
+    - Content-Length
+    - Content-MD5
+    - Content-Type
+    - Date
+    - Api-Version
+    - Response-Time
+    - Authorization
+  Access-Control-Expose-Headers:
+    - api-version
+    - content-length
+    - content-md5
+    - content-type
+    - date
+    - request-id
+    - response-time
