--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "coffee-script" : "*",
     "zenserver"    : "*" },
   "devDependencies": {
-    "request" : "*"
+    "request" : "*",
+    "zenrequest": "*"
   },
   "scripts"         : {
     "start": "node zen.js zen development" ,
