--- a/zen.request.yml
+++ b/zen.request.yml
@@ -8,7 +8,7 @@ port    : 1337
 tests:
     - restful
     - status
-    - appnima
+    # - appnima
     - form
 
 # ------------------------------------------------------------------------------
