--- a/zen.proxy.yml
+++ b/zen.proxy.yml
@@ -80,3 +80,12 @@ rules:
     hosts:
       - address : localhost
         port    : 1337
+
+  - name    : nomada
+    strategy: roundrobin
+    redirect: true
+    domain  : localhost
+    query   : /nomada
+    hosts:
+      - address : https://nomada.io
+        port    : 443
