--- a/zen.yml
+++ b/zen.yml
@@ -27,15 +27,21 @@ statics:
   - file    : robots.txt
     folder  : /static
 
+# -- Mustache template ---------------------------------------------------------
+mustache:
+  cache: true
+
 # -- session -------------------------------------------------------------------
 session:
   # Cookie Request
-  cookie: zencookie
-  domain: ""
-  path  : "/"
-  expire: 3600 #seconds
+  cookie        : zencookie
+  domain        : ""
+  path          : "/"
+  expire        : 3600 #seconds
   # HTTP Header
-  authorization: zenauth
+  authorization : zenauth
+  # secret for session crypto
+  secret        : zeniscool
 
 # -- Monitor -------------------------------------------------------------------
 monitor:
@@ -54,10 +60,10 @@ firewall:
 # -- CORS Properties -----------------------------------------------------------
 headers:
   # Access-Control-Allow-Origin: "*"
-  Access-Control-Allow-Origin: "http://localhost:8000"
+  Access-Control-Allow-Origin     : "http://localhost:8000"
   Access-Control-Allow-Credentials: true
-  Access-Control-Allow-Methods: GET,PUT,POST,DELETE,OPTIONS
-  Access-Control-Max-Age: 1
+  Access-Control-Allow-Methods    : GET,PUT,POST,DELETE,OPTIONS
+  Access-Control-Max-Age          : 1
   Access-Control-Allow-Headers:
     - Accept
     - Accept-Version
